--- a/index.html
+++ b/index.html
@@ -698,46 +698,52 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="utf-box-stats with-margin">
-              <i class="fa fa-camera"></i>
-              <p class="m-0 position-relative">Bird watching </p>
-            </div>
-          </div>
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Bird watching </p>
+                   </div>
+           </div>
 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="utf-box-stats with-margin">
-              <i class="fa fa-film"></i>
-              <p class="m-0 position-relative">Travel</p>
-            </div>
-          </div>
 
-          <div class="col-12 col-md-6 col-lg-4">
+           <div class="col-12 col-md-6 col-lg-4">
             <div class="utf-box-stats with-margin">
-              <i class="fa fa-cutlery"></i>
-              <p class="m-0 position-relative">Art</p>
-            </div>
-          </div>
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Travel </p>
+                   </div>
+           </div>
+
+
+           <div class="col-12 col-md-6 col-lg-4">
+            <div class="utf-box-stats with-margin">
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Art </p>
+                   </div>
+           </div>
+
 
           
-          <div class="col-12 col-md-6 col-lg-4">
+           <div class="col-12 col-md-6 col-lg-4">
             <div class="utf-box-stats with-margin">
-              <i class="fa fa-cutlery"></i>
-              <p class="m-0 position-relative">Photography</p>
-            </div>
-          </div>
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Photography
+                     </p>
+                   </div>
+           </div>
 
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="utf-box-stats with-margin">
-              <i class="fa fa-cutlery"></i>
-              <p class="m-0 position-relative">Storytelling</p>
-            </div>
-          </div>
 
-          <div class="col-12 col-md-6 col-lg-4">
+           <div class="col-12 col-md-6 col-lg-4">
             <div class="utf-box-stats with-margin">
-              <i class="fa fa-cutlery"></i>
-              <p class="m-0 position-relative">Cooking</p>
-            </div>
-          </div>
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Storytelling </p>
+                   </div>
+           </div>
+
+
+           <div class="col-12 col-md-6 col-lg-4">
+            <div class="utf-box-stats with-margin">
+               <img style="width: 21%;" src="img/dancing.svg">
+                     <p class="m-0 position-relative">Cooking </p>
+                   </div>
+           </div>
 
 
 
