--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <li>
                   <div class="icon"></div>
                   <span class="time">Oct 2024 – Present</span>
-                  <h5>Marketing, Branding and Communications Coordinator| Harvard University| Boston, MA</h5>
+                  <h5>Marketing, Branding and Communications Coordinator | Harvard University | Boston, MA</h5>
                   <p><b style="color:#77894d">•</b> Led inclusive marketing efforts for career fairs, integrating email,
                     social media & campaigns to increase participation by 35% <br>
                     <b style="color:#77894d">•</b> Managed and mentored two student assistants, delegating tasks and
@@ -462,7 +462,7 @@
                 <li>
                   <div class="icon"></div>
                   <span class="time">Oct 2022 – July 2024</span>
-                  <h5>Marketing Coordinator |Northeastern University| Boston, MA</h5>
+                  <h5>Marketing Coordinator | Northeastern University | Boston, MA</h5>
                   <p><b style="color:#77894d">•</b> Collaborated with creative teams to produce high-quality visual and
                     written content, boosting brand visibility & 35% engagement <br>
                     <b style="color:#77894d">•</b> Developed and implemented targeted content marketing strategies,
@@ -486,7 +486,7 @@
                 <li>
                   <div class="icon"></div>
                   <span class="time">Feb 2021 – March 2022</span>
-                  <h5>Associate Content Creator | Deep Red Ink| India</h5>
+                  <h5>Associate Content Creator | Deep Red Ink | India</h5>
                   <p><b style="color:#77894d">•</b> Authored compelling copy for print and digital campaigns, including
                     Google Ads, email, and social media campaigns, leveraging market research &nbsp;&nbsp;&nbsp;and
                     analysis to achieve a 15% increase in ad conversions for national and international brands <br>
@@ -509,21 +509,19 @@
                 <li>
                   <div class="icon"></div>
                   <span class="time">Feb 2020 – Jan 2021</span>
-                  <h5>Content Manager| MaveX | India</h5>
-                  <p><b style="color:#77894d">•</b> Authored compelling copy for print and digital campaigns, including
-                    Google Ads, email, and social media campaigns, leveraging market research &nbsp;&nbsp;&nbsp;and
-                    analysis to achieve a 15% increase in ad conversions for national and international brands <br>
-                    <b style="color:#77894d">•</b> Contributed to the UNICEF-India AIDS awareness campaign (2021) in
-                    Andhra Pradesh, aiding APSACS in winning the National Award <br>
-                    <b style="color:#77894d">•</b> Managed PPC campaigns, achieving a 30% increase in click-through
-                    rates (CTR) and a 20% reduction in cost per acquisition (CPA) <br>
-                    <b style="color:#77894d">•</b> Generated engaging, brand-aligned social media content and optimized
-                    websites on WordPress and Shopify using digital storytelling, resulting in a &nbsp;&nbsp;&nbsp;25%
-                    increase in overall engagement and enhanced user experience <br>
-                    <b style="color:#77894d">•</b> Executed email marketing campaigns through Hub Spot and Mail chimp,
-                    and managed paid social media campaigns on Instagram and YouTube, &nbsp;&nbsp;&nbsp;applying
-                    creative design thinking and analytics to drive increased website traffic and successful lead
-                    generation <br>
+                  <h5>Content Manager | MaveX | India</h5>
+                  <p><b style="color:#77894d">•</b> Conducted market analysis to identify growth prospects and drive strategic
+                    initiatives, leading to a 15% increase in market share<br>
+                    <b style="color:#77894d">•</b> Led the creation of content marketing strategies, achieving a 25% increase in
+                    meeting rates and driving higher conversion rates<br>
+                    <b style="color:#77894d">•</b> Developed CRM strategies integrating market research, social media &amp; digital
+                    marketing, enhancing customer satisfaction by 20%<br>
+                    <b style="color:#77894d">•</b> Orchestrated cross-functional collaboration with product development and
+                    sales teams, implementing both B2B and B2C marketing strategies to &nbsp;&nbsp;&nbsp;align
+                    marketing efforts with business objectives and enhance visibility<br>
+                    <b style="color:#77894d">•</b> Spearheaded the launch of the startup&#39;s brand communications by employing
+                    Go-To-Market plans and advanced SEO tactics, establishing a robust &nbsp;&nbsp;&nbsp;market
+                    identity and achieving a 30% increase in market penetration<br>
 
                   </p>
                 </li>
