--- a/index.html
+++ b/index.html
@@ -505,7 +505,27 @@
                   </p>
                 </li>
 
+                <li>
+                  <div class="icon"></div>
+                  <span class="time">Feb 2020 – March 2022</span>
+                  <h5>Brand and Content Strategist | Independent Consultant | India</h5>
+                  <p><b style="color:#77894d">•</b> Collaborated with clients to ensure strategic alliance, achieving a 15% increase
+                    in retention through execution of marketing strategies<br>
+                    <b style="color:#77894d">•</b> Implemented data-driven decision-making processes, resulting in a 20%
+                    improvement in campaign efficiency and effectiveness<br>
+                    
+                    <b style="color:#77894d">•</b> Analyzed market trends and landscape to inform and refine marketing
+                    strategies, contributing to a 10% growth in market share<br>
+                    <b style="color:#77894d">•</b> Directed client meetings to capture requirements and developed impactful
+                    branding and content strategies, including SEO, social media marketing, &nbsp;&nbsp;&nbsp;graphic
+                    design, and marketing automation for 11 brands, resulting in an 18% increase in
+                    client ROI<br>
+                    <b style="color:#77894d">•</b> Managed paid media campaigns, including Facebook and other social media ads,
+                    and executed email marketing strategies to optimize campaign &nbsp;&nbsp;&nbsp;performance,
+                    enhance lead generation, and increase website traffic<br>
 
+                  </p>
+                </li>
                 <li>
                   <div class="icon"></div>
                   <span class="time">Feb 2020 – Jan 2021</span>
